...
            "state" : "translated",
            "value" : "横向滚动"
          }
        }
      }
    },
    "demo.imessage.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "دردشة بنمط iMessage"
...
            "value" : "Photos"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "照片"
          }
        }
      }
    },
    "imessage.audio.attachment.recording" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "iMessage"
          }
        }
      }
    },
    "imessage.composer.send" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إرسال"
...
            "state" : "translated",
            "value" : "实况照片无法播放，可关闭后重新开启重试"
          }
        }
      }
    },
    "imessage.preview.more" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "المزيد"
...
            "state" : "translated",
            "value" : "更多"
          }
        }
      }
    },
    "imessage.preview.mute" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "كتم الصوت"
...
            "value" : "Next Attachment"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "下一个附件"
          }
        }
      }
    },
    "imessage.preview.pages" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "暂停"
          }
        }
      }
    },
    "imessage.preview.play" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تشغيل"
...
            "state" : "translated",
            "value" : "播放"
          }
        }
      }
    },
    "imessage.preview.position" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "العنصر %d من %d"
...
            "state" : "translated",
            "value" : "上一个附件"
          }
        }
      }
    },
    "imessage.preview.progress" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "موضع التشغيل"
...
